# wine-quality-prediction

./: .coveracerc  .coveragerc  .gitignore  LICENSE  Makefile  README.md  codecov.yml  coverage.xml  pyproject.toml
.github/: CITATION.cff  CODEOWNERS
.github/workflows/: test-and-coverage.yml
icons/: README.md
model/: data_loading.py  neural_network.py  sql_analytics.py
model/tests/: test_data_loading.py  test_neural_network.py  test_sql_analytics.py
output/database_info/: feature_correlations.csv  wine_data.db
src/: main.py
